--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,7 @@
+/bin export-ignore
 /tests export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.php_cs.dist export-ignore
+/.travis.yml export-ignore
 /phpunit.xml.dist export-ignore
