--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "awesomite/error-dumper": "^0.13.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.3"
+        "phpunit/phpunit": "^6.3",
+        "satooshi/php-coveralls": "^1.0.1"
     },
     "license": "MIT",
     "authors": [
