--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 /bin export-ignore
 /tests export-ignore
+/.coveralls.yml export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.php_cs.dist export-ignore
