--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "awesomite/nano",
     "description": "Nano http framework",
     "require": {
+        "php": "^7.0",
         "symfony/http-foundation": "^3.3",
         "awesomite/chariot": "^0.3.0",
         "psr/container": "^1.0",
